Adjusted archive links

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -147,8 +147,8 @@ files have been processed and only reads with mapping quality $\ge 20$ have been
 Table \ref{tbl:call_data} for details about contents of available data.
 
 \todo[author=mp]{Add readme to archives, check link}:
-\newcommand{\callRDD}{gDNA vs. cDNA: \url{https://data.dieterichlab.org/s/gDNA_VS_cDNA.tar.gz}}
-\newcommand{\callRRD}{cDNA vs. cDNA: \url{https://data.dieterichlab.org/s/cDNA_VS_cDNA.tar.gz}}
+\newcommand{\callRDD}{gDNA vs. cDNA: \url{https://data.dieterichlab.org/s/gDNA_VS_cDNA}}
+\newcommand{\callRRD}{cDNA vs. cDNA: \url{https://data.dieterichlab.org/s/cDNA_VS_cDNA}}
 \begin{table}
   \centering
   \caption{Detailed description of available \textit{in silico} data for variant calling. Data has been simulated on human chromosome 1 using hg19.}
@@ -188,7 +188,7 @@ pseudouridines with carbodiimide (+CMC) and detecting arrest events that are ind
 transcription stops in high-throughput sequencing under 3 different conditions (HIVRT, SIIIMn, and
 SIIIMg).
 
-The archive \url{https://data.dieterichlab.org/s/arrest_events.tar.gz} consists of:
+The archive \url{https://data.dieterichlab.org/s/arrest_events} consists of:
 \begin{description}
   \item[*.bam, *.bam.bai] BAM files and BAM indicices for different 3 conditions HIVRT, SIIIRTMg,
   and SIIIRTMn each treated with CMC(+CMC) or mock-treated(-CMC) (6 BAM + 6 BAI files).
