Updates to manual

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -16,7 +16,7 @@
 %---------------------------------------------------------------------------------------------------
 \title{JACUSA2 manual}
 \author{Michael Piechotta \\ michael.piechotta@gmail.com}
-\date{18th, May, 2021} 
+\date{28th, June, 2021} 
 %---------------------------------------------------------------------------------------------------
 \begin{document}
 \newcommand{\call}[1]{\textit{call-#1}\xspace}
@@ -730,7 +730,9 @@ a value of ``tag=A2G''.
 \input{CLI/R}
 %---------------------------------------------------------------------------------------------------
 \subsection{Library type}
+\input{CLI/P}
 \input{CLI/P1}
+\input{CLI/P2}
 %---------------------------------------------------------------------------------------------------
 \subsection{Read/base stratification}
 \input{CLI/B}
@@ -751,10 +753,14 @@ a value of ``tag=A2G''.
 \input{CLI/m2}
 %---------------------------------------------------------------------------------------------------
 \subsubsection{Filter by base call quality}
+\input{CLI/q}
 \input{CLI/q1}
+\input{CLI/q2}
 %---------------------------------------------------------------------------------------------------
 \subsubsection{Filter by minimal coverage}
+\input{CLI/c}
 \input{CLI/c1}
+\input{CLI/c2}
 %---------------------------------------------------------------------------------------------------
 \subsubsection{Limit maximal depth}
 \input{CLI/d1}
@@ -764,12 +770,18 @@ a value of ``tag=A2G''.
 %---------------------------------------------------------------------------------------------------
 \subsubsection{Retain by flag(s)}
 \input{CLI/F}
+\input{CLI/F1}
+\input{CLI/F2}
 %---------------------------------------------------------------------------------------------------
 \subsubsection{Filter by number of hits}
+\input{CLI/filterNH}
 \input{CLI/filterNH_1}
+\input{CLI/filterNH_2}
 %---------------------------------------------------------------------------------------------------
 \subsubsection{Filter by number of mismatches}
+\input{CLI/filterNM}
 \input{CLI/filterNM_1}
+\input{CLI/filterNM_2}
 %---------------------------------------------------------------------------------------------------
 \subsection{Artefact/feature filter}\label{sec:cli_artefact_filter}
 \input{CLI/a}
